StereoKit/Native/NativeAPI.cs


		[DllImport(dll, CallingConvention = call                 )] public static extern TextStyle           text_make_style     (IntPtr font, float character_height, Color color_gamma);
		[DllImport(dll, CallingConvention = call                 )] public static extern TextStyle           text_make_style_shader(IntPtr font, float character_height, IntPtr shader, Color color_gamma);
		[DllImport(dll, CallingConvention = call                 )] public static extern TextStyle           text_make_style_mat (IntPtr font, float character_height, IntPtr material, Color color_gamma);
		[DllImport(dll, CallingConvention = call                 )] public static extern void                text_add_at         ([In] byte[] text_utf8, in Matrix transform, TextStyle style, TextAlign position, TextAlign align, float off_x, float off_y, float off_z, Color vertex_tint_linear);
		[DllImport(dll, CallingConvention = call, CharSet = utf16)] public static extern void                text_add_at_16      (string text_utf16, in Matrix transform, TextStyle style, TextAlign position, TextAlign align, float off_x, float off_y, float off_z, Color vertex_tint_linear);
		[DllImport(dll, CallingConvention = call                 )] public static extern float               text_add_in         ([In] byte[] text_utf8, in Matrix transform, Vec2 size, TextFit fit, TextStyle style, TextAlign position, TextAlign align, float off_x, float off_y, float off_z, Color vertex_tint_linear);
		[DllImport(dll, CallingConvention = call, CharSet = utf16)] public static extern float               text_add_in_16      (string text_utf16, in Matrix transform, Vec2 size, TextFit fit, TextStyle style, TextAlign position, TextAlign align, float off_x, float off_y, float off_z, Color vertex_tint_linear);
		[DllImport(dll, CallingConvention = call                 )] public static extern Vec2                text_size           ([In] byte[] text_utf8, TextStyle style);
		[DllImport(dll, CallingConvention = call, CharSet = utf16)] public static extern Vec2                text_size_16        (string text_utf16, TextStyle style);
		[DllImport(dll, CallingConvention = call                 )] public static extern Vec2                text_char_at        ([In] byte[] text_utf8, TextStyle style, int char_index, Vec2 opt_size, TextFit fit, TextAlign position, TextAlign align);
		[DllImport(dll, CallingConvention = call, CharSet = utf16)] public static extern Vec2                text_char_at_16     (string text_utf16, TextStyle style, int char_index, Vec2 opt_size, TextFit fit, TextAlign position, TextAlign align);
		[DllImport(dll, CallingConvention = call                 )] public static extern IntPtr              text_style_get_material(TextStyle style);
		[DllImport(dll, CallingConvention = call                 )] public static extern float               text_style_get_char_height(TextStyle style);

		///////////////////////////////////////////

		[DllImport(dll, CallingConvention = call                 )] public static extern IntPtr              solid_create        (in Vec3 position, in Quat rotation, SolidType type);
		[DllImport(dll, CallingConvention = call                 )] public static extern void                solid_release       (IntPtr solid);
		[DllImport(dll, CallingConvention = call, CharSet = ascii)] public static extern void                solid_set_id        (IntPtr solid, string id);
		[DllImport(dll, CallingConvention = call, CharSet = ascii)] public static extern IntPtr              solid_get_id        (IntPtr solid);
		[DllImport(dll, CallingConvention = call                 )] public static extern void                solid_add_sphere    (IntPtr solid, float diameter, float kilograms, in Vec3 offset);
		[DllImport(dll, CallingConvention = call                 )] public static extern void                solid_add_box       (IntPtr solid, in Vec3 dimensions, float kilograms, in Vec3 offset);
		[DllImport(dll, CallingConvention = call                 )] public static extern void                solid_add_capsule   (IntPtr solid, float diameter, float height, float kilograms, in Vec3 offset);
		[DllImport(dll, CallingConvention = call                 )] public static extern void                solid_set_type      (IntPtr solid, SolidType type);
		[DllImport(dll, CallingConvention = call                 )] public static extern void                solid_set_enabled   (IntPtr solid, int enabled);
		[DllImport(dll, CallingConvention = call                 )] public static extern void                solid_move          (IntPtr solid, in Vec3 position, in Quat rotation);
		[DllImport(dll, CallingConvention = call                 )] public static extern void                solid_teleport      (IntPtr solid, in Vec3 position, in Quat rotation);
		[DllImport(dll, CallingConvention = call                 )] public static extern void                solid_set_velocity  (IntPtr solid, in Vec3 meters_per_second);
		[DllImport(dll, CallingConvention = call                 )] public static extern void                solid_set_velocity_ang(IntPtr solid, in Vec3 radians_per_second);
		[DllImport(dll, CallingConvention = call                 )] public static extern void                solid_get_pose      (IntPtr solid, out Pose out_pose);

		///////////////////////////////////////////
